--- a/Develop/package.json
+++ b/Develop/package.json
@@ -16,6 +16,9 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "apollo-server-express": "^3.12.0"
+    "@apollo/client": "^3.7.14",
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-server-express": "^3.12.0",
+    "react-router-dom": "^6.11.2"
   }
 }
