--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "googlebooks-app",
+  "name": "book-search",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
@@ -16,9 +16,8 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.14",
-    "@apollo/react-hooks": "^4.0.0",
-    "apollo-server-express": "^3.12.0",
-    "react-router-dom": "^6.11.2"
+    "apollo-server-express": "^3.4.0",
+    "graphql": "^16.6.0",
+    "webpack": "^4.42.0"
   }
 }
